# Kataglyphis-Inference-Engine

./: .dartignore  .gitignore  .gitmodules  LICENSE  README.md  analysis_options.yaml  dartdoc_options.yaml  default.profraw  flutter_rust_bridge.yaml  pubspec.yaml
.codacy/: cli.sh  codacy.yaml
.github/actions/cleanup-disk-space/: action.yml
.github/actions/install-deps/: action.yml
.github/workflows/: codeql.yml  dart.yml  dart_build_android_app.yml  dart_on_linux.yml  dart_on_native_linux.yml  dart_on_native_windows.yml  dart_on_web_linux.yml  dart_on_windows.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle  build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native_inference.cpp
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/cpp/: CMakeLists.txt
assets/documents/footer/: openSourceLicensesDe.md  openSourceLicensesEn.md
assets/settings/: webrtc_settings.json
docs/: INTRODUCTION.md
docs/source/: README.md  camera-streaming.md  conf.py  getting-started.md  index.rst  overview.md  platforms.md  project-operations.md  readmes.md  roadmap.md  upgrade-guide.md
integration_test/: simple_test.dart
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: blog_dependent_app_attributes.dart  blog_page_config.dart  main.dart  my_two_cents_config.dart
lib/Pages/: blog_dependent_screen_configurations.dart  jotrockenmitlocken_screen_configurations.dart
lib/Pages/AboutMePage/: about_me_page.dart  about_me_page_navbar_config.dart
lib/Pages/Blog/: blog_page.dart
lib/Pages/DataPage/: data_page.dart  data_page_entry.dart  data_pages_navbar_page_config.dart  media_critics_page.dart
lib/Pages/DocumentsPage/: document_page_navbar_config.dart  documents_page.dart
lib/Pages/ErrorPage/: error_page.dart  error_page_widget.dart
lib/Pages/Footer/: jotrockenmitlocken_footer.dart
lib/Pages/Home/: home_config.dart
lib/Pages/LandingPage/: landing_page.dart  landing_page_navbar_page_config.dart
lib/Pages/StreamPage/: stream_page.dart  stream_page_navbar_config.dart  webrtc_view.dart  webrtc_view_stub.dart
lib/Pages/shared/: markdown_content_page.dart
lib/Routing/: jotrockenmitlocken_router.dart
lib/js/: gstwebrtc_api_interop.dart
lib/l10n/: app_de.arb  app_en.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart
lib/settings/: webrtc_settings.dart
lib/src/db/: sqlite3_healthcheck.dart  sqlite3_loader.dart  sqlite3_loader_native.dart  sqlite3_loader_web.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/utils/: locale_utils.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  gradle.properties  settings.gradle
rust_builder/cargokit/: run_build_tool.cmd  run_build_tool.sh
rust_builder/ios/: kataglyphis_rustprojecttemplate.podspec  rust_lib_kataglyphis_inference_engine.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: kataglyphis_rustprojecttemplate.podspec  rust_lib_kataglyphis_inference_engine.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: bump_version.sh  setup_sqlite3_wasm.sh
scripts/ai/: demo.py  demo_ai.py  demo_overlay.py  demo_yolov11_cocksorange.py  demo_yolov11_rasp.py  demo_yolov5.py  demo_yolov5_cocksorange.py
scripts/linux/: build-linux.sh  check-linux.sh  ci-common.sh  ci-dart-build-android-app.sh  ci-dart-on-native-linux.sh  container-run-android.sh  container-run-native-linux.sh  generate-docs.sh  install-flutter.sh  package-linux.sh  run-android.sh  run-native-linux.sh  setup-dependencies.sh  setup-dependencies.sh.save  setup-flutter-arm64.sh  setup-flutter-common.sh  setup-flutter-x86-64.sh  start_on_rasp.sh
scripts/windows/: Start-Windows.ps1  Windows.BuildConfig.ps1  Windows.Paths.psm1  add-gstreamer-to-path.ps1  build-windows.ps1  setup-dependencies.ps1  setup-gstreamer-devel.ps1
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  CMakePresets.json
windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+59 files in other folders)
